  * Renamed ParticleSystem:count and all getNum* functions to get*Count.
  * Renamed love.graphics.drawq to love.graphics.drawg.
  * Renamed SpriteBatch:addq/setq to SpriteBatch:addg/setg.

  * Removed love.graphics.drawTest.
  * Removed love.graphics.quad/triangle.
  * Removed love.graphics.setColorMode.
  * Removed love.graphics.newStencil.
  * Removed Quad objects (replaced by Geometry).
  * Removed love.joystick.open and friends.
  * Removed thread names.
  * Removed old thread messaging api (see Channels).
  * Removed love.timer.getMicroTime.

  * Updated the windows console, it now tries to re-use an active one first.
  * Updated error handling, error handlers now get resolved when the error occurs.
  * Updated order of sleep/present in love.run (now draws, *then* sleeps).
  * Updated the default filesystem identity to omit file extension.
  * Updated love.filesystem.newFile to optionally open the file.
  * Updated most love.filesystem functions to return nil, error on internal failure.
  * Updated the setFilter and setWrap methods, the second argument is now optional.
  * Updated Font and ParticleSystem rendering code, now more performant.
  * Updated SpriteBatch code, now more performant when (un)binding.
  * Updated Image creation code to error when creation fails.
  * Updated Canvas code to support more systems.
  * Updated love.graphics.newScreenshot to create a fully opaque image by default.
  * Updated error messages when sending bad values to Shaders.
  * Updated love.graphics.newParticleSystem to have a default buffer size of 1000.
  * Updated ImageData:setPixel to accept a table and default to 255 alpha.
  * Updated love.image memory handling, improves errors and thread-safety.
  * Updated allocation for SoundData, it's more efficient and less wasteful.
  * Updated Source:set* functions to default z to 0.
  * Updated love.timer.getFPS to be microsecond-accurate.
  * Updated love.timer.getTime to be microsecond-accurate and monotonic.
